# grafika_opengl

./: CMakeLists.txt
Tugas1/: tugas_01  tugas_01.cpp
common/: control4.cpp  control4.hpp
minggu_2/tugas1/: tugas_1  tugas_1.cpp  tugas_2_1
minggu_2/tugas2/: CarFragmentShader.fragmentshader  CrossFragmentShader.fragmentshader  WheeFragmentShader.fragmentshader  WheelFragmentShader.fragmentshader  WindowFragmentShader.fragmentshader  tugas_2.cpp  tugas_2_2
minggu_3/tugas1/: tugas_1.cpp  tugas_3_1
minggu_4/tugas1/: tugas_1.cpp  tugas_4_1
minggu_5/tugas1/: TransformVertexShader.vs  tugas_1.cpp  tugas_5_1
minggu_6/tugas1/: SmokeParticle.fs  TextureFragmentShader.fs  tugas_1.cpp  tugas_6_1
